--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'eclipse'
-    id 'maven-publish'
+    id 'maven-publish'  // 修改这里：maven-publishing -> maven-publish
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
 }
 
-version = '1.0.2'
+version = '1.0.3'
 group = 'com.lanche.simpleprogress'
 archivesBaseName = 'simpleprogress'
 
